--- a/src/app/iframe/iframe.component.html
+++ b/src/app/iframe/iframe.component.html
@@ -1,4 +1,4 @@
 
 <h2>IFRAME</h2>
 
-<iframe src="http://localhost:4200/viewer" style="height: 100vh; width: 100vw"></iframe>
+<iframe id="embedded" src="http://localhost:4200/viewer" style="height: 100vh; width: 100vw"></iframe>
