Cleaned up the reproducer

--- a/src/app/pdf-viewer/pdf-viewer.component.html
+++ b/src/app/pdf-viewer/pdf-viewer.component.html
@@ -3,3 +3,4 @@
     [useBrowserLocale]="true" [enablePinchOnMobile]="true" (pageRendered)="pageRendered($event)"
     (pagesLoaded)="pagesLoaded($event)" (pdfLoaded)="pdfLoaded()">
 </ngx-extended-pdf-viewer>
+<ng-template #injectContainer></ng-template>
